@@ -13,6 +13,7 @@ Bugfixes:
  - GB Memory: Initialize peripheral pointers
  - GB MBC: Fix SRAM sizes 4 and 5
  - GB Video: Fix 16-bit screenshots (fixes mgba.io/i/826)
+ - GB Core: Fix palette loading when loading a foreign config
 Misc:
  - GBA Timer: Use global cycles for timers
  - GBA: Extend oddly-sized ROMs to full address space (fixes mgba.io/i/722)
